css/main.css
@charset "UTF-8";
/* CSS Document */
/*****************************************Color Palette*****************************
Light cyan (header,footer and aside) #E0FFFF (209, 255, 204)
Orange (links and button) #FF5600  (255, 86, 0)
Light yellow (section backgrounds): #FFFACD  (255, 250, 205)
Dark gray (body text): #333  (51, 51, 51)
****************************************************End of Color Palette***********
**********************************************************************************/
/*****************************************Eric Meyer CSS reset**********************/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/***************************************************End Eric Meyer CSS reset*********
************************************************************************************/
/*****************************************Site wide settings************************/
#wrapper {
    max-width: 960px; /*working on now!!!was width:960px*/
    margin: 0 auto;
}
body {
	max-width: 100%;
    background: #FFC;
	background-image: url(../images/wood.jpg);
	background-size: 100% 100%;
	background-repeat: no-repeat;
	font-family: 'Quicksand', sans-serif;
	font-size: 100%; /*default 16px*/
	line-height: 1.4;
	margin-top: 0;
	margin-bottom: 0;
	color: #333;
}
h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0 10px;
}
h2 {
	font-size: 1.5em; /*24px (24/16)*/
	font-weight: bold;
	padding: 20px 10px 20px 10px;
}
h3 {
	font-size: 1.25em; /*20px (20/16)*/
	font-weight: bold;
}
p {
	font-size: 1.0625em; /*16px (16/16)-trying 17px (17/16)*/
    margin: 0;
    padding: 0 15px;
}
img {
	max-width: 100%; /*working on now-and width of wrapper*/
	margin-top: 0;
	margin-bottom: 0;
}
ul {
	margin-top: 0;
	margin-bottom: 0;
}
/***************************************************End of site wide settings*******
************************************************************************************/
/****************************************Header settings****************************/
#home {
    background: #E0FFFF;
}
h1 {
	text-indent: -104.16666%; /*-1000px; (-1000/960)*/
}
#home p {
	font-style: italic;
	font-weight: normal;
	margin-top: -20px;
}
#home ul {
	width: 97.91666%; /*940px (940/960)*/
	margin: 0 auto;
	list-style-type: none;
	padding:22px;
}
#home ul li a {
	width: 24.47916%; /*235px (235/960) might need to change to 940*/
	float: left;
	text-decoration: none;
	text-align: center;
	color: #FF5600;
	font-weight: bold;
}
#home a:link {
	color: #FF5600;
}
#home a:visited {
	color: #FF5600;
}
#home a:hover {
	color: #333;
}
#home a:active {
	color: #FFFACD;
}
/***************************************************End of header settings*********
***********************************************************************************/
/*****************************************Main content settings********************/
#main_section {
	background: #FFFACD;
	clear: right;
	padding-bottom: 20px;
	/*width: 100%;*/ /*960px, just created-still trying to figure out the aside and snowy owls*/
}
#main_section img {
	margin-bottom: 0;
	padding-bottom: 0;
}
aside {
	width: 20%; /* I just like the look of it!just created to set width of aside, 270px (270/960)*/
	background: #E0FFFF;
	/*border-top: 1px groove #333;
	border-bottom: 1px groove #333;
	border-left: 1px groove #333;******I don't really like the border*******/
	float: right;
	padding: 30px 40px;
	margin-top: 0;
	position: relative;
	top: -416px;
}
aside ul {
	font-size: 1.0625em; /*17px (17/16) or is it (17/20 because of the h3?) this was not here-created to add font size*/
	font-style: italic;
	list-style-type: square;
	line-height: 1.5;
}
aside h3 {
	padding-bottom: 10px;
	text-align: center;
	text-shadow: 1px 1px 2px #003;
}
.column_text {
	 width: 70%;
	 float: none; /*just created the top two trying to figure out the responsive issues*/
	 /*width: 71.875%;*/ /*created along with the aside width, 690px (690/960)*/
    -moz-column-count: 2; 
    -webkit-column-count: 2; 
    column-count: 2;
	column-width: 295px; /*just added to try to fix smaller screen size, still need to change to percentage*/
    -moz-column-width: 295px; 
    -webkit-column-width: 295px; 
}
.column_text p {
	padding-bottom: 10px;
}
/*************************************************End of Main content settings*****
***********************************************************************************/
/*******************************************Ancient Knowledge section**************/
#ancientknowledge {
	width: 100%;
	background: rgba(255, 250, 205, 0.90);
}
#ancientknowledge img {
	float: right;
	width: 28%;
	position: relative;
	top: 38px;
	left: 22.9%; 
	/*just added, I also removed the width and height from the HTML, not sure if this is correct*/
	/*position: fixed;
	top: 500px;
	left: 20%;*/
	
}
#ancient_article {
    /*just added, and commented out padding-right: 310px for this test*/
	float: none;
	padding-bottom: 30px;
	/*padding-right: 310px;*/
}
#ancient_article h3 {
	width: 100%;
	padding: 5px 1.6%;
}
#ancient_article p {
	float: none;
	padding-right: 0;
	padding-bottom: 10px;
	width: 55%;
}
/***************************************************End of Ancient Knowledge*******
***********************************************************************************/
/*******************************************Gallery section************************/
#gallery {
	background: #FFFACD;
	clear: both;
	float: none;
}
#gallery ul li {
	display: inline-block;
	padding-left: 50px;
	padding-bottom: 40px;
}
/***************************************************End of Gallery section********
**********************************************************************************/
/*******************************************About Us section**********************/
#aboutus {
	background: rgba(255, 250, 205, 0.90);
}
#aboutus p {
	padding-bottom: 10px;
}
blockquote {
	width: 83.333333%; /*800px (800/960)*/
	text-indent: 20px;
	margin-bottom: 0;
	padding-right: 40px;
	padding-bottom: 20px;
	padding-left: 40px;
}
/***************************************************End of About Us section*******
**********************************************************************************/
/*******************************************Sign up section***********************/
#signup {
	background: #FFFACD;
}
/***************************************************End of Sign up section********
**********************************************************************************/
/*******************************************Footer settings***********************/
footer {
	background: #E0FFFF;
}
footer ul {
	width: 97.91666%; /*940px; (940/960)*/
	padding: 5px 0.53191%; /*5px left and right (5/940)*/
}
footer a {
	width: 19.14893%; /*180px (180/940)*/
	float: left;
	padding-bottom: 5px;
	/*margin-right: 0;
	margin-left: 0;*/ /*margin: 5px 50px 10px 50px;*/
	text-decoration: none;
	text-align: center;
	color: #FF5600;
	font-weight: bold;
}
footer p {
	font-size: 0.75em; /*12px (12/16)*/
	padding-bottom: 5px;
	clear: left;
}
a:link {
	color: #FF5600;
}
a:visited {
	color: #FF5600;
}
a:hover {
	color: #333;
}
a:active {
	color: #FFFACD;
}
/***************************************************End of footer settings*********
***********************************************************************************/
/**********************************************Buttons and Misc.*******************/
.button {
	font-family: 'Quicksand', sans-serif;
	font-size: 1.5em; /*24px (24/16)*/
	font-weight: bold;
	background-color: #FF5600;
	border: none;
	border-radius: 4px;
	box-shadow: 2px 2px 2px #333;
	margin: 30px 0 10px 26px;
	text-shadow: 1px 1px 3px #FFF;
	width: 150px;
	height: 40px;
	background: -moz-linear-gradient(top, #f3c5bd 0%, #ea2803 9%, #ea2803 34%, #ff6600 75%, #e86c57 94%, #c72200 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f3c5bd), color-stop(9%,#ea2803), color-stop(34%,#ea2803),     color-stop(75%,#ff6600), color-stop(94%,#e86c57), color-stop(100%,#c72200)); /* Thanks to Colorzilla.com for helping with the gradient*/
}
/***************************************************End of buttons and Misc.*********
************************************************************************************/
/***********************************************Media Queries***********************/
/*LARGE-Tablet Portrait size to standard 960 (devices and browsers)*/
@media screen and (min-width: 768px) and (max-width: 959px) {
	#home {
		background: honeyDew;
		background-image: none;
	}
}
/*MEDIUM-Mobile Landscape size to Tablet Portrait (devices and browsers)*/
@media only screen and (min-width: 480px) and (max-width: 767px) {
	#home {
		background: mistyRose;
		background-image: none;
	}
	#home ul {
		padding-bottom: 50px;
	}
	#main_section aside {
		display: none;
	}
	#ancientknowledge img {
		width: 36%;
		margin-right: 24%;
	}
	#ancient_article {
		width: 95%;
	}
	#ancient_article h3 {
		width: 100%;
	}
}
/*SMALL-Mobile Portrait size to Mobile Landscape size (devices and browsers)*/
@media only screen and (max-width: 479px) {
	#home {
		background: lavender;
		background-image: none;
	}
	#home ul {
		padding-bottom: 50px;
	}
	#main_section aside {
		display: none;
	}
	#ancientknowledge img {
		float: none;
		margin-left: -15%;
		width: 50%;
	}
	.column_text {
		column-count: 1;
		width: 95%;
	}
	#ancient_article h3 {
		font-size: 1.1em;
		width: 100%
	}
	#ancient_article {
		width: 100%;
		padding-top: 50px;
		float: none;
	}
	#gallery img {
		padding: 0 7%;
	}
	#signup_link {
		display:none;
	}
	footer ul {
		width: 100%;
		list-style-type: none;
	}
	footer ul li a {
		margin: 0 3%;
	}
	
}
		
		

